- Emphasized architectural pillars within the README.
- Updated the README after earlier documentation passes.
- Refined multi-context runtime management.
- Reverted the multi-context runtime management refinement after issues.
- Refined the context multiplexer threading spine.
- Applied miscellaneous adjustments and cleanup.
- Fixed the menu button grid layout.
- Corrected Raylib viewport offsets so atlas-driven UI no longer clips or drifts inside letterboxed windows.
- Adjusted the SDL3 renderer to honour the active viewport, keeping GUI overlays centered across aspect ratios.
- Bumped the engine version to v0.60.0 and refreshed the analysis notes with new focus areas.
- Cached Raylib viewport fit data and reused it during sprite draws to remove the remaining atlas clipping regressions.
- Synced SDL3 context dimensions with the renderer output so menu layouts stay centered after window resizes.
- Added a configurable `--menu-columns` cap for the main overlay grid and documented the runtime flag.
- Bumped the engine version to v0.61.0 and updated the engine analysis focus areas.
- Wired the CLI `--update` command into the modular updater flow, requiring `--force` to install builds, and bumped the engine version to v0.62.0.
- Ensured updater download failures print diagnostics on a fresh line, documented the release, and bumped the engine version to v0.62.1.
- Documented that forced updater runs rehydrate the AlmondShell source tree, added Windows 11 guidance for running uncertified builds, and refreshed the README accordingly.
- Seeded Raylib's viewport metrics during resize dispatch so atlas menus stay centred from the very first frame, documented the release, and bumped the engine version to v0.62.2.
- Added a scissor pass to Raylib's fitted viewport so GUI sprites stay clipped, made the software renderer cleanup idempotent to stop duplicate shutdown logs, documented the release, and bumped the engine version to v0.62.3.
